<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        app:navigationIcon="@drawable/logo_white_sml"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:title=" "
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/CuppingSummaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cupping_summary"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/alumnisans_bold"
        android:textColor="@color/red"
        android:textAllCaps="true"
        android:padding="16dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="fill"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/summaryDate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/summaryCoffee"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/coffee"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summaryRoast"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/roast"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summaryAcidity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/acidity"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summaryFlavour"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/flavour"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summarySweetness"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/sweetness"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summaryBitterness"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/bitterness"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summaryTactile"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/tactile"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summaryBalance"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/balance"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summaryTotalScore"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/total_score"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/summaryNotes"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/notes"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonAddAnother"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/add_another_cupping"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/buttonBackToDashboard"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/back_to_dashboard"
            android:layout_gravity="start"
            android:backgroundTint="@color/dark_gray"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
