<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_account"
    tools:context=".EditProfile"
    android:background="@color/white">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".25"
        android:src="@drawable/coffeeplant" />

    <!-- Grouping the logo and text in a LinearLayout -->
    <LinearLayout
        android:id="@+id/logo_and_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/editAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_txt"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/alumnisans_bold"
            android:textColor="@color/red"
            android:textAllCaps="true"
            android:textSize="30sp"/>
    </LinearLayout>

    <!-- New Account Form -->
    <LinearLayout
        android:id="@+id/newAccountForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo_and_title"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/dark_gray"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonEditAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            app:backgroundTint="@color/red"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginHorizontal="20dp"
            app:backgroundTint="@color/dark_gray"/>
    </LinearLayout>




</RelativeLayout>