<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        app:navigationIcon="@drawable/logo_white_sml"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:title=" "
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="500dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/framelayout">

        <TextView
            android:id="@+id/LandingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_message"
            android:layout_centerHorizontal="true"
            android:fontFamily="monospace"
            android:textColor="@color/red"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LandingTitle">

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="15sp"
                android:backgroundTint="@color/red"
                android:layout_marginStart="20dp"/>

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_logout"
                android:textSize="15sp"
                android:backgroundTint="@color/dark_gray"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"/>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>